_sass/pages/_ditap.scss
// Extra footer padding for sticky footer
.page-ditap {
  footer {
    padding-bottom: 6rem !important;

    @include media-breakpoint-up(md) {
      padding-bottom: 3rem !important;
    }
  }

  .hero-container {
    height: auto;
    max-width: 1140px;
    padding-bottom: 56px;
    padding-top: 56px;
  }

  .pullquote {
    background-color: $ochre-40;
    color: $black;

    &::before {
      color: $gray-80;
      opacity: 1;
    }
  }

  .accordion-header h3 {
    color: $black;
    font-family: $font-family-sans-serif;
  }

  .accordion-card-body {
    @include list;
    font-family: $font-family-sans-serif;
  }
}

.page-ditap-content {
  .subnav-col {
    margin-left: -15px !important;
  }

  h2 {
    font-size: $font-size-xxx-large;
    margin-top: 4rem;
  }

  h3 {
    font-size: $font-size-x-large;
  }

  h2,
  h3 {
    + p {
      margin-top: 0.75em;
    }
  }

  p {
    margin-bottom: 0;
  }

  .employee-img {
    @include border-radius($border-radius);

    @include media-breakpoint-up(lg) {
      height: 226px;
    }
  }

  .accordion-card-body {
    font-size: $font-size-small;

    *:last-child {
      margin-bottom: 0;
    }
  }

  .image-list {
    img {
      max-height: 183px;
      width: auto;
    }

    .image-list-img {
      text-align: center;
    }
  }
}

.quote-container {
  line-height: 1.5;

  // Box shadow "hack" to add a full-bleed to the right side of quote box
  // Uses multiple breakpoints for different responsive sizes
  @include media-breakpoint-up(md) {
    box-shadow: 510px 0px $sk-yellow;
  }

  @include media-breakpoint-up(lg) {
    box-shadow: 690px 0px $sk-yellow;
  }

  @include media-breakpoint-up(xl) {
    box-shadow: 824px 0px $sk-yellow;
  }

  &:before,
  &:after {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
  }

  &:before {
    box-shadow: -100px 0;
  }

  &:after {
    box-shadow: 100px 0;
  }

  .text-intro {
    margin-top: 1em;
  }
}

.text-grid {
  > * {
    margin-top: 2rem;
  }

  h3 {
    font-size: $font-size-small;
    letter-spacing: 0.05em;
    line-height: 1.375;
    text-transform: uppercase;
  }

  p {
    font-size: $font-size-small;
    margin-bottom: 0;
  }
}

.page-join-us {
  .text-grid {
    h3 {
      font-family: $font-family-mono;
      font-weight: $font-weight-medium;
      letter-spacing: 0;
    }
  }
}

.text-intro {
  font-size: $font-size-medium;

  @include media-breakpoint-up(lg) {
    font-size: $font-size-x-large;
  }

  h2 + & {
    margin-top: 0.5em !important;
  }
}

.quote-text {
  font-size: $font-size-large;
}

.image-list {
  > div {
    margin-top: 1.5rem;
  }

  img {
    width: 100%;
  }
}

$outline-light: 2px solid #f2f2f2;

.course-cta {
  border: $card-border-width solid $card-border-color;

  a {
    font-family: $font-family-mono;
  }
}

.tuition-card.tuition-card {
  // higher specificity so it doesn't inheret link styles
  @include border-radius($border-radius);
  border: $card-border-width solid $card-border-color;
  box-shadow: $card-box-shadow;
  color: $body-color;
  padding: 1.25rem;

  &:hover {
    border: $card-border-width solid $card-border-color;
    box-shadow: none;
    color: $body-color;
  }
}

.tuition-card-note {
  display: block;
  margin-top: 1em;
}

.tuition-card-meta {
  p {
    margin-top: 4px;
  }
}

.tuition-card-meta-info {
  margin-top: 4px;

  * {
    display: inline;
  }

  h4 {
    font-size: $font-size-medium;
  }
}

.tuition-card-link {
  font-family: $font-family-mono;
  font-size: $font-size-small;
  font-weight: normal;
}

// Deprecated
.tuition-card-img {
  background-color: #f2f2f2;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 225px;

  @include media-breakpoint-up(lg) {
    height: 100%;
  }
}

.tuition-card-link {
  color: $link-color;

  &:hover {
    color: $link-hover-color;
  }
}

.form-small {
  max-width: 392px;
}

.class-heading {
  color: $brand-primary;
  display: inline-block;
}

.class-header {
  @include media-breakpoint-up(lg) {
    display: flex;
    justify-content: space-between;
  }
}

.class-spots {
  display: block;
  margin-top: 1rem;

  @include media-breakpoint-up(lg) {
    display: inline-block;
    flex: none;
    float: right;
    margin-left: 1rem;
    margin-top: 0;
  }

  span {
    color: $blue-100-a;
    padding: 4px 12px;
    letter-spacing: 0.05em;
    position: relative;
    font-family: $font-family-mono;
    font-size: $font-size-large;
    vertical-align: top;
    border-radius: 5px;
    background-color: $ochre-20;
  }
}

.page-work-services-training-ditap-executive {
  .hero-btn-group .hero-btn-wrapper {
    flex: 1;

    @include media-breakpoint-up(sm) {
      flex: none;
    }
  }
}

.page-service-design {
  .hero-container {
    display: flex;
    height: 400px;
    max-width: 640px;
    padding-block: initial !important;

    a {
      font-size: 32px;
    }
  }

  h1 {
    line-height: 1.15;
  }
}

